# python-roborock

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  commitlint.config.js  commitlint.config.mjs  mypy.ini  offline.py  pyproject.toml  setup.py
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: ci.yml  release.yaml
docs/: requirements.txt
docs/source/: api.rst  api_commands.rst  conf.py  error.rst  index.rst  status.rst  supported_devices.rst  usage.rst
docs/source/_templates/: footer.html
roborock/: __init__.py  api.py  cli.py  cloud_api.py  code_mappings.py  command_cache.py  const.py  containers.py  exceptions.py  local_api.py  package_parser.py  protocol.py  roborock_future.py  roborock_message.py  roborock_queue.py  roborock_typing.py  typing.py  util.py  web_api.py
roborock/map_parser/: __init__.py  image_handler.py  map_data.py  map_data_parser.py  map_parser_const.py
roborock/offline/: offline.py  socket_listener.py
roborock/version_1_apis/: __init__.py  roborock_client_v1.py  roborock_local_client_v1.py  roborock_mqtt_client_v1.py  roborock_v1_client.py  roborock_v1_local_client.py  roborock_v1_mqtt_client.py
roborock/version_a01_apis/: __init__.py  roborock_client_a01.py  roborock_mqtt_client_a01.py
tests/: conftest.py  mock_data.py  mqtt_packet.py  test_a01_api.py  test_api.py  test_containers.py  test_local_api_v1.py  test_queue.py  test_roborock_message.py  test_util.py  test_web_api.py
